[package]
name = "imgurian"
version = "0.2.9"
edition = "2018"
description = "Imgur API client."
documentation = "https://docs.rs/imgurian"
homepage = "https://github.com/r7kamura/imgurian"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r7kamura/imgurian.git"
include = ["src/**/*", "LICENSE.txt", "README.md"]

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.6" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
serde_path_to_error = "0.1.5"
structopt = "0.3.25"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.5.8"
