[package]
name = "imgurian"
version = "0.4.0"
edition = "2018"
description = "Imgur API client."
documentation = "https://docs.rs/imgurian"
homepage = "https://github.com/r7kamura/imgurian"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r7kamura/imgurian.git"
include = ["src/**/*", "LICENSE.txt", "README.md"]

[dependencies]
base64 = "0.13.0"
imgur_openapi = { version = "0.4.0" }
serde_json = "1.0.69"
structopt = "0.3.25"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.5.8"
